Nuevo formato programa creado

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoo</title>
+    <title>Animales</title>
+    <link rel='stylesheet' href='css/animals.css'>
+    <link rel='stylesheet' href='css/style.css'>
 </head>
-
 <body>
-
+    <div class="scene"></div>
 </body>
-
+<script src='js/script.js'></script>
 </html>
