Optimizaciones de js y colores de fondo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,15 @@
     <link rel='stylesheet' href='css/animals.css'>
     <link rel='stylesheet' href='css/style.css'>
 </head>
+
 <body>
-    <div class="scene"></div>
+    <h1 class='name'>ZOO DAW2</h1>
+    <main class='scene'></main>
+    <footer class='buttons'>
+        <button id='previous'>Atrás</button>
+        <button id='next'>Siguiente</button>
+    </footer>
 </body>
 <script src='js/script.js'></script>
+
 </html>
