--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animales</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
+
+    <link rel='stylesheet' href='css/logo.css'>
     <link rel='stylesheet' href='css/animals.css'>
     <link rel='stylesheet' href='css/style.css'>
 </head>
@@ -12,10 +18,7 @@
 <body>
     <h1 class='name'>ZOO DAW2</h1>
     <main class='scene'></main>
-    <footer class='buttons'>
-        <button id='previous'>Atrás</button>
-        <button id='next'>Siguiente</button>
-    </footer>
+    <div class='signature'>mor</div>
 </body>
 <script src='js/script.js'></script>
 
