Llamicornio y camaleon añadidos

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 <body>
     <h1 class='name'>ZOO DAW2</h1>
-    <main class='scene'></main>
-    <div class='signature'>mor</div>
+    <main class='scene'>
+        <div class='signature'>mor</div>
+    </main>
 </body>
 <script src='js/script.js'></script>
 
