Añadimos un auto scroll y añadimos el animal de pedro

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <h1 class='name'>ZOO DAW2</h1>
+    <button id="autoScrollBtn" class="scroll-btn">▶ Auto Scroll</button>
     <main class='scene'>
         <div class='signature'>mor</div>
     </main>
