--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1 class='name'>ZOO DAW2</h1>
+    <h1 class='name'></h1>
     <button id="autoScrollBtn" class="scroll-btn">▶ Auto Scroll</button>
     <main class='scene'>
         <div class='signature'>mor</div>
